# clientz

./: README.md  api_documentation_appscriptz.md  api_documentation_canvaz.md  api_documentation_kanbanz.md  api_documentation_llmada.md  api_documentation_mermaidz.md  api_documentation_promptlibz.md  api_documentation_toolsz.md  api_documentation_toolsz2.md  index.html  main.py  mkdocs.yml  pyproject.toml
clientz/: __main__.py  config.yaml  core.py  server.py
src/: notes.txt
src/clientz/: config.yaml  core.py  log.py  server.py
tests/: clientz.ipynb  test.py
