[project]
name = "clientz"
version = "0.1.9"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
 "agentflowz>=0.1.2",
 "fastapi>=0.115.12",
 "llmada>=0.1.9",
 "querypipz==0.1.17",
 "requests>=2.32.3",
 "sse-starlette>=2.3.4",
 "toml>=0.10.2",
 "toolsz==0.1.10",
 "uvicorn>=0.34.2",
]

[tool.setuptools.package-data]
clientz = [ "config.yaml",]

[tool.pytest.ini_options]
testpaths = [ "tests",]
pythonpath = [ "src",]

[tool.uv.sources]
toolsz = { path = "../toolsz/dist/toolsz-0.1.12-py3-none-any.whl" }
