[project]
name = "clientz"
version = "0.1.12"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [ "agentflowz>=0.1.2", "fastapi>=0.115.12", "llmada>=0.1.13", "querypipz==0.1.19", "requests>=2.32.3", "sse-starlette>=2.3.4", "toml==0.10.2", "toolsz>=0.1.12", "uvicorn>=0.34.2",]

[tool.setuptools.package-data]
clientz = [ "config.yaml",]

[tool.pytest.ini_options]
testpaths = [ "tests",]
pythonpath = [ "src",]
